# DevIL

./: CMakeLists.txt
DevIL/: CMakeLists.txt
DevIL/src-IL/: CMakeLists.txt
DevIL/src-IL/include/: il_internal.h
DevIL/src-IL/src/: il_blp.cpp  il_iff.cpp  il_tiff.cpp  il_utx.cpp
DevIL/src-ILU/: CMakeLists.txt
cmake/: toolchain.cmake
